--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,8 +8,12 @@
 
 <h1>Burası Home/Index</h1>
 
-
+@*Html.Partial, sayfaları küçük parçalara ayırmak için kullanılabilir Örnek : bir sayfan var ve her sayfa da görünecek bir kampanya bölümün var, kampanya bölümü partial olarak tasarlayabilirsiniz
+Partial ile çalışmak ve tasarımınızı parçalara bölmek kod yazma hızını artırır, çünkü, kocaman bir sayfada her bir bölümü ayrı ayrı bulmak oldukça zordur
+ancak sayfanı belirli bölümlere ayırıp her bir bölümü partial yapmak, hem daha düzenli hemde daha kolau geliştirme yapmanızı sağlar!!
+*@
 @Html.Partial("ImgPartial",Model)
+
 
 
 <h1>Burası Home Index</h1>
